see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

29-May-2010 Jean-Marie Simonet
# [#20627] weblinks category count not showing. Thanks Detlef.
$ Refactoring of installation ini/keys.
# [#20594] Logged in frontside users shown in Backsite status. Thanks Detlef.
^ [#20712] [patch] Hathor compatibility changes. Thanks Andrea.
$ Added missing strings
# [#20699] com_users edit view allows users to view the contents of another users fields. Thanks Christophe.

29-May-2010 Andrew Eddie
 # Fixed issue [#20494] Quick Icons Module Should Take into Account More Permissions (Omar Ramos).
 # Partially fixed [#20623] MySQL sql-mode STRICT issues (Adam Banks).

28-May-2010 Jean-Marie Simonet
$ Added string
# [#20654] Sorting of Featured Articles in Administration don't work. Thanks Omar.
# [#20671] Error uninstalling template due to capital letters in template name. Thanks Nikolai.
# [#20660] mod_menu can't output invalid markup. Thanks Christophe.
# [#20245] com_search logical issue. Thanks Christophe.
# [#20687] mistyped static (Extraneous endif). Thanks Ashwin.
# [#20688] Uninstalling a language extension is possible even if it's the default language. Thanks Christophe.
$ Added/corrected string

28-May-2010 Andrew Eddie
 # Fixed issue [#20272] Can't provide multiple select list in modules.
 # Fixed issue [#20675] Performance Improvements for JAccess:getGroupsByUser() (OmarRamos).
 # Fixed issue [#20522] Redirect Manager - Date is wrong &  copy function (Peter Martin).

27-May-2010 Jean-Marie Simonet
$ [#20659] Converting strings to the new format in installation. Thanks Johnathan Lima.