@@ -186,6 +186,8 @@ COM_CONTACT_FIELD_PARAMS_VCARD_DESC="Whether or not to allow export to vCard for
 COM_CONTACT_FIELD_PARAMS_VCARD_LABEL="vCard"
 COM_CONTACT_FIELD_PARAMS_WEBPAGE_DESC="Show or hide webpage"
 COM_CONTACT_FIELD_PARAMS_WEBPAGE_LABEL="Webpage"
+COM_CONTACT_FIELD_PRESENTATION_DESC="Determines the style used to display sections of the contact form"
+COM_CONTACT_FIELD_PRESENTATION_LABEL="Display format"
 COM_CONTACT_FIELD_PROFILE_SHOW_DESC="If this contact is mapped to a user, and if this is set to Show, then the profile of this user will show."
 COM_CONTACT_FIELD_PROFILE_SHOW_LABEL="Show Profile"
 COM_CONTACT_FIELD_SHOW_CATEGORY_DESC="Displays the category"
@@ -202,6 +204,9 @@ COM_CONTACT_FIELD_VALUE_NO_LINK="Show Without Link"
 COM_CONTACT_FIELD_VALUE_NONE="None"
 COM_CONTACT_FIELD_VALUE_TEXT="Text"
 COM_CONTACT_FIELD_VALUE_WITH_LINK="Show With Link"
+COM_CONTACT_FIELD_VALUE_FULL="Plain"
+COM_CONTACT_FIELD_VALUE_SLIDERS="Sliders"
+COM_CONTACT_FIELD_VALUE_TABS="Tabs"
 COM_CONTACT_FIELDSET_CONTACTFORM_LABEL="Mail Options"
 COM_CONTACT_FIELDSET_CONTACT_LABEL="Contact Display Options"
 COM_CONTACT_FIELDSET_METADATA="Metadata Options"
@@ -248,3 +253,5 @@ COM_CONTACT_WARNING_PROVIDE_VALID_URL="Please provide a valid URL"
 COM_CONTACT_WARNING_SAME_NAME="The name %s is already used. Please enter another name"
 COM_CONTACT_WARNING_SELECT_CONTACT_TOPUBLISH="Please select a contact to publish"
 COM_CONTACT_XML_DESCRIPTION="This component shows a listing of contact information"
+COM_CONTACT_FIELDSET_CONTACT_FORM="Conact form"
+
