@@ -41,7 +41,15 @@
 		<!-- Basic options. -->
 		<fieldset name="params" label="COM_CONTACT_BASIC_OPTIONS_FIELDSET_LABEL"
 		>
-
+			<field name="presentation_style" type="list"
+				description="COM_CONTACT_FIELD_PRESENTATION_DESC"
+				label="COM_COTNACT_FIELD_PRESENTATION_LABEL"
+			>
+				<option value="">JGLOBAL_USE_GLOBAL</option>			
+				<option value="sliders">COM_CONTACT_FIELD_VALUE_SLIDERS</option>
+				<option value="tabs">COM_CONTACT_FIELD_VALUE_TABS</option>
+				<option value="full">COM_CONTACT_FIELD_VALUE_FULL</option>
+			</field>
 			<field name="show_contact_category" type="list"
 				description="COM_CONTACT_FIELD_CONTACT_SHOW_CATEGORY_DESC"
 				label="COM_CONTACT_FIELD_CONTACT_SHOW_CATEGORY_LABEL"
