@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+29-May-2010 Mark Dexter
+^ Added parameter for display style of contact
+
 29-May-2010 Jean-Marie Simonet
 # [#20627] weblinks category count not showing. Thanks Detlef.
 $ Refactoring of installation ini/keys.
